# ZiXiao-Git-Server

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  FRONTEND_MIGRATION.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  go.mod  go.sum  index.html
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy-frontend.yml  release.yml
assets/: Dashboard-C3PC9blw.js  Dashboard-Npnm9YdQ.css  Dashboard-UwO3NeYw.js  Dashboard-vjeLfA2t.css  Home-C9f1vhNu.css  Home-CPpuamub.css  Home-CZKo2Ff3.js  Home-D2QtGfNL.js  Login-0U4wLyKn.css  Login-B0djMt-S.css  Login-BAtyxs8z.js  Login-Bdle4qUM.js  NotFound-B7lfT2sO.js  NotFound-C5_TcfDQ.css  NotFound-Dnk8vn6o.css  NotFound-hox0V6yO.js  Register-BP9ZIPE5.css  Register-CXUPFpaN.js  Register-Cj9N9IDA.js  Register-P3ll45iz.css  Repositories-BMY3EO_x.js  Repositories-BfOXQA2H.css  Repositories-Ctk28kHP.css  Repositories-xxEF0zkI.js  RepositoryDetail-CxR4LOed.js  RepositoryDetail-DXg2DMDQ.js  RepositoryDetail-PzGSGhc1.css  RepositoryDetail-xgba6Yxl.css  index-CNyJ74Tt.js  index-CiuqObnT.css  index-Cw8dJ5sJ.js  mdui-B9C5XAKh.js  repository-C335MaUT.js  repository-CCfrAeA1.js  vendor-wTwM5GbD.js
cmd/server/: main.go
configs/: config.yaml  nginx-dev.conf  nginx-local.conf  nginx-prod.conf  server.yaml
docs/: API.md  DATABASE.md  DOCKER_DEPLOYMENT.md  FRONTEND_DEPLOYMENT.md  FRONTEND_DEV.md  GITHUB_ACTIONS.md  VSCODE.md  WINDOWS.md  XCODE.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
frontend/src/services/: index.js
frontend/src/stores/: auth.js  repository.js
frontend/src/utils/: api.js
frontend/src/views/: Dashboard.vue  Home.vue  Login.vue  NotFound.vue  Register.vue  Repositories.vue  RepositoryDetail.vue
git-core/: CMakeLists.txt
git-core/include/: git_c_api.h  git_object.h  git_pack.h  git_protocol.h  git_repository.h
git-core/src/: git_c_api.cpp  git_object.cpp  git_pack.cpp  git_protocol.cpp  git_repository.cpp
internal/api/: auth_handlers.go  git_handlers.go  middleware.go  repo_handlers.go  routes.go
internal/auth/: auth.go
internal/config/: config.go
internal/database/: database.go
internal/models/: models.go
internal/repository/: repository.go
pkg/gitcore/: gitcore.go
scripts/: api-test.ps1  api-test.sh  build-frontend.ps1  build-frontend.sh  build.ps1  build.sh  install.ps1  install.sh  test.sh
web/: index.html
